--- a/fancy-cars/src/app/cars/details/details.component.html
+++ b/fancy-cars/src/app/cars/details/details.component.html
@@ -75,9 +75,13 @@
           </div>
 
           <div class="project-info-box mt-0 mb-0" *ngIf="!hasUser">
-            <p routerLink="/user/register" style="font-weight: bolder; cursor: pointer;" >Want to give this car a thumbs up? Register here!</p>
+            <p
+              routerLink="/user/register"
+              style="font-weight: bolder; cursor: pointer"
+            >
+              Want to give this car a thumbs up? Register here!
+            </p>
           </div>
-
         </div>
 
         <div class="col-md-7">
@@ -85,6 +89,5 @@
         </div>
       </div>
     </div>
-    
   </div>
 </app-hero>
