--- a/fancy-cars/src/app/core/header/header.component.html
+++ b/fancy-cars/src/app/core/header/header.component.html
@@ -1,10 +1,9 @@
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <img class="customLogo" src="../../../assets/smallLogo.jpg" routerLink="/"/>
+  <img class="customLogo" src="../../../assets/smallLogo.jpg" routerLink="/" />
   <div>
-    <p *ngIf="hasUser" style="font-weight: bolder;">Hello, {{username}}!</p>
+    <p *ngIf="hasUser" style="font-weight: bolder">Hello, {{ username }}!</p>
     <!-- <p *ngIf="!userEmail">Hello, Guest!</p> -->
-  </div>  
+  </div>
   <button
     class="navbar-toggler"
     type="button"
@@ -17,43 +16,41 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent" 
->
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a  class="nav-link" routerLink="/">Home</a>
+        <a class="nav-link" routerLink="/">Home</a>
       </li>
 
       <li class="nav-item active">
-        <a  class="nav-link" routerLink="/user/my-cars" *ngIf="hasUser">My Cars</a>
+        <a class="nav-link" routerLink="/user/my-cars" *ngIf="hasUser"
+          >My Cars</a
+        >
       </li>
 
       <li class="nav-item active">
-        <a  class="nav-link" routerLink="/cars/add" *ngIf="hasUser">Add Car</a>
+        <a class="nav-link" routerLink="/cars/add" *ngIf="hasUser">Add Car</a>
       </li>
 
       <li class="nav-item active">
-        <a  class="nav-link" routerLink="/cars/all">All Cars</a>
+        <a class="nav-link" routerLink="/cars/all">All Cars</a>
       </li>
 
       <li class="nav-item active">
-        <a  class="nav-link" routerLink="/cars/search">Search</a>
+        <a class="nav-link" routerLink="/cars/search">Search</a>
       </li>
 
       <li class="nav-item active" *ngIf="!hasUser">
-        <a  class="nav-link" routerLink="/user/register">Register</a>
+        <a class="nav-link" routerLink="/user/register">Register</a>
       </li>
 
       <li class="nav-item active" *ngIf="!hasUser">
-        <a  class="nav-link" routerLink="/user/login">Login</a>
+        <a class="nav-link" routerLink="/user/login">Login</a>
       </li>
 
       <li class="nav-item active" *ngIf="hasUser">
-        <a  class="nav-link" (click)="logout()" routerLink="#" >Logout</a>
+        <a class="nav-link" (click)="logout()" routerLink="#">Logout</a>
       </li>
-
     </ul>
   </div>
 </nav>
-
-
