--- a/fancy-cars/src/app/cars/add-new/add-new.component.html
+++ b/fancy-cars/src/app/cars/add-new/add-new.component.html
@@ -1,237 +1,328 @@
 <app-hero>
-    <h1>ADD NEW CAR</h1>
-    <h2>ADD YOUR AWESOME CAR BY USING THE BELOW FORM: </h2>
-<form #form="ngForm" (ngSubmit)="onAddNewCarSubmitHandler(form)">
+  <h1>ADD NEW CAR</h1>
+  <h2>ADD YOUR AWESOME CAR BY USING THE BELOW FORM:</h2>
+  <form #form="ngForm" (ngSubmit)="onAddNewCarSubmitHandler(form)">
+    <div class="form-group">
+      <label for="exampleInputBrand" style="color: black; font-weight: bolder"
+        >Description</label
+      >
+      <input
+        type="string"
+        class="form-control"
+        id="exampleInputDescription"
+        aria-describedby="descriptionHelp"
+        name="description"
+        placeholder="Car description"
+        required
+        minlength="10"
+        maxlength="20"
+        ngModel
+        #inputDescription="ngModel"
+      />
 
-  <div class="form-group">
-    <label for="exampleInputBrand" style="color: black; font-weight: bolder;">Description</label>
-    <input
-      type="string"
-      class="form-control"
-      id="exampleInputDescription"
-      aria-describedby="descriptionHelp"
-      name="description"
-      placeholder="Car description"
-      required
-      minlength="10"
-      maxlength="20"
-      ngModel
-      #inputDescription="ngModel"
-    />
-
-    <div *ngIf="inputDescription.touched">
-      <p class="error" *ngIf="inputDescription.errors?.['required']" style="color: red; font-weight: bolder;">
-        Description is required!
-      </p>
-      <p class="error" *ngIf="inputDescription.errors?.['minlength']" style="color: red; font-weight: bolder;">
-        Description length must be at least
-        {{inputDescription.errors?.['minlength']['requiredLength']}}!
-      </p>
+      <div *ngIf="inputDescription.touched">
+        <p
+          class="error"
+          *ngIf="inputDescription.errors?.['required']"
+          style="color: red; font-weight: bolder"
+        >
+          Description is required!
+        </p>
+        <p
+          class="error"
+          *ngIf="inputDescription.errors?.['minlength']"
+          style="color: red; font-weight: bolder"
+        >
+          Description length must be at least
+          {{inputDescription.errors?.['minlength']['requiredLength']}}!
+        </p>
+      </div>
     </div>
-  </div>
 
-  <div class="form-group">
-    <label for="exampleInputBrand" style="color: black; font-weight: bolder;">Brand</label>
-    <input
-      type="string"
-      class="form-control"
-      id="exampleInputBrand"
-      aria-describedby="brandHelp"
-      name="brand"
-      placeholder="Car brand"
-      required
-      minlength="3"
-      ngModel
-      #inputBrand="ngModel"
-    />
+    <div class="form-group">
+      <label for="exampleInputBrand" style="color: black; font-weight: bolder"
+        >Brand</label
+      >
+      <input
+        type="string"
+        class="form-control"
+        id="exampleInputBrand"
+        aria-describedby="brandHelp"
+        name="brand"
+        placeholder="Car brand"
+        required
+        minlength="3"
+        ngModel
+        #inputBrand="ngModel"
+      />
 
-    <div *ngIf="inputBrand.touched">
-      <p class="error" *ngIf="inputBrand.errors?.['required']" style="color: red; font-weight: bolder;">
-        Brand is required!
-      </p> 
-      <p class="error" *ngIf="inputBrand.errors?.['minlength']" style="color: red; font-weight: bolder;">
-        Brand length must be at least
-        {{inputBrand.errors?.['minlength']['requiredLength']}}!
-      </p>
+      <div *ngIf="inputBrand.touched">
+        <p
+          class="error"
+          *ngIf="inputBrand.errors?.['required']"
+          style="color: red; font-weight: bolder"
+        >
+          Brand is required!
+        </p>
+        <p
+          class="error"
+          *ngIf="inputBrand.errors?.['minlength']"
+          style="color: red; font-weight: bolder"
+        >
+          Brand length must be at least
+          {{inputBrand.errors?.['minlength']['requiredLength']}}!
+        </p>
+      </div>
     </div>
-  </div>
 
-  <div class="form-group">
-    <label for="exampleInputModel" style="color: black; font-weight: bolder;">Model</label>
-    <input
-      type="string"
-      class="form-control"
-      id="exampleInputModel"
-      aria-describedby="modelHelp"
-      name="model"
-      placeholder="Car model"
-      required
-      minlength="2"
-      ngModel
-      #inputModel="ngModel"
-    />
+    <div class="form-group">
+      <label for="exampleInputModel" style="color: black; font-weight: bolder"
+        >Model</label
+      >
+      <input
+        type="string"
+        class="form-control"
+        id="exampleInputModel"
+        aria-describedby="modelHelp"
+        name="model"
+        placeholder="Car model"
+        required
+        minlength="2"
+        ngModel
+        #inputModel="ngModel"
+      />
 
-    <div *ngIf="inputModel.touched">
-      <p class="error" *ngIf="inputModel.errors?.['required']" style="color: red; font-weight: bolder;">
-        Model is required!
-      </p>
-      <p class="error" *ngIf="inputModel.errors?.['minlength']" style="color: red; font-weight: bolder;">
-        Model length must be at least
-        {{inputModel.errors?.['minlength']['requiredLength']}}!
-      </p>
+      <div *ngIf="inputModel.touched">
+        <p
+          class="error"
+          *ngIf="inputModel.errors?.['required']"
+          style="color: red; font-weight: bolder"
+        >
+          Model is required!
+        </p>
+        <p
+          class="error"
+          *ngIf="inputModel.errors?.['minlength']"
+          style="color: red; font-weight: bolder"
+        >
+          Model length must be at least
+          {{inputModel.errors?.['minlength']['requiredLength']}}!
+        </p>
+      </div>
     </div>
-  </div>
 
-  <div class="form-group">
-    <label for="exampleInputEngine" style="color: black; font-weight: bolder;">Engine Type</label>
-    <input
-      type="string"
-      class="form-control"
-      id="exampleInputEngine"
-      aria-describedby="engineHelp"
-      name="engine"
-      placeholder="Engine type"
-      required
-      minlength="2"
-      ngModel
-      #inputEngine="ngModel"
-    />
+    <div class="form-group">
+      <label for="exampleInputEngine" style="color: black; font-weight: bolder"
+        >Engine Type</label
+      >
+      <input
+        type="string"
+        class="form-control"
+        id="exampleInputEngine"
+        aria-describedby="engineHelp"
+        name="engine"
+        placeholder="Engine type"
+        required
+        minlength="2"
+        ngModel
+        #inputEngine="ngModel"
+      />
 
-    <div *ngIf="inputEngine.touched">
-      <p class="error" *ngIf="inputEngine.errors?.['required']" style="color: red; font-weight: bolder;">
-        Engine is required!
-      </p>
-      <p class="error" *ngIf="inputEngine.errors?.['minlength']" style="color: red; font-weight: bolder;">
-        Engine length must be at least
-        {{inputEngine.errors?.['minlength']['requiredLength']}}!
-      </p>
+      <div *ngIf="inputEngine.touched">
+        <p
+          class="error"
+          *ngIf="inputEngine.errors?.['required']"
+          style="color: red; font-weight: bolder"
+        >
+          Engine is required!
+        </p>
+        <p
+          class="error"
+          *ngIf="inputEngine.errors?.['minlength']"
+          style="color: red; font-weight: bolder"
+        >
+          Engine length must be at least
+          {{inputEngine.errors?.['minlength']['requiredLength']}}!
+        </p>
+      </div>
     </div>
-  </div>
 
-  <div class="form-group">
-    <label for="exampleInputPower" style="color: black; font-weight: bolder;">Horsepower</label>
-    <input
-      type="number"
-      class="form-control"
-      id="exampleInputPower"
-      aria-describedby="powerHelp"
-      name="horsepower"
-      placeholder="Horsepower"
-      required
-      min="1"
-      ngModel
-      #inputHorsePower="ngModel"
-    />
+    <div class="form-group">
+      <label for="exampleInputPower" style="color: black; font-weight: bolder"
+        >Horsepower</label
+      >
+      <input
+        type="number"
+        class="form-control"
+        id="exampleInputPower"
+        aria-describedby="powerHelp"
+        name="horsepower"
+        placeholder="Horsepower"
+        required
+        min="1"
+        ngModel
+        #inputHorsePower="ngModel"
+      />
 
-    <div *ngIf="inputHorsePower.touched">
-      <p class="error" *ngIf="inputHorsePower.errors?.['required']" style="color: red; font-weight: bolder;">
-        Horsepower is required!
-      </p>
-      <p class="error" *ngIf="inputHorsePower.errors?.['min']" style="color: red; font-weight: bolder;">
-        Horsepowe can't be 0!
-      </p>
+      <div *ngIf="inputHorsePower.touched">
+        <p
+          class="error"
+          *ngIf="inputHorsePower.errors?.['required']"
+          style="color: red; font-weight: bolder"
+        >
+          Horsepower is required!
+        </p>
+        <p
+          class="error"
+          *ngIf="inputHorsePower.errors?.['min']"
+          style="color: red; font-weight: bolder"
+        >
+          Horsepowe can't be 0!
+        </p>
+      </div>
     </div>
-  </div>
 
-  <div class="form-group">
-    <label for="exampleInputFuel" style="color: black; font-weight: bolder;">Fuel</label>
-    <input
-      type="string"
-      class="form-control"
-      id="exampleInputFuel"
-      aria-describedby="fuelHelp"
-      name="fuel"
-      placeholder="Fuel"
-      required
-      minlength="3"
-      ngModel
-      #inputFuel="ngModel"
-    />
+    <div class="form-group">
+      <label for="exampleInputFuel" style="color: black; font-weight: bolder"
+        >Fuel</label
+      >
+      <input
+        type="string"
+        class="form-control"
+        id="exampleInputFuel"
+        aria-describedby="fuelHelp"
+        name="fuel"
+        placeholder="Fuel"
+        required
+        minlength="3"
+        ngModel
+        #inputFuel="ngModel"
+      />
 
-    <div *ngIf="inputFuel.touched">
-      <p class="error" *ngIf="inputFuel.errors?.['required']" style="color: red; font-weight: bolder;">
-        Fuel type is required!
-      </p>
-      <p class="error" *ngIf="inputFuel.errors?.['minlength']" style="color: red; font-weight: bolder;">
-        Fuel length must be at least
-        {{inputFuel.errors?.['minlength']['requiredLength']}}!
-      </p>
+      <div *ngIf="inputFuel.touched">
+        <p
+          class="error"
+          *ngIf="inputFuel.errors?.['required']"
+          style="color: red; font-weight: bolder"
+        >
+          Fuel type is required!
+        </p>
+        <p
+          class="error"
+          *ngIf="inputFuel.errors?.['minlength']"
+          style="color: red; font-weight: bolder"
+        >
+          Fuel length must be at least
+          {{inputFuel.errors?.['minlength']['requiredLength']}}!
+        </p>
+      </div>
     </div>
-  </div>
 
-  <div class="form-group">
-    <label for="exampleInputColor" style="color: black; font-weight: bolder;">Color</label>
-    <input
-      type="string"
-      class="form-control"
-      id="exampleInputColor"
-      aria-describedby="colorHelp"
-      name="color"
-      placeholder="Color"
-      required
-      minlength="3"
-      ngModel
-      #inputColor="ngModel"
-    />
+    <div class="form-group">
+      <label for="exampleInputColor" style="color: black; font-weight: bolder"
+        >Color</label
+      >
+      <input
+        type="string"
+        class="form-control"
+        id="exampleInputColor"
+        aria-describedby="colorHelp"
+        name="color"
+        placeholder="Color"
+        required
+        minlength="3"
+        ngModel
+        #inputColor="ngModel"
+      />
 
-    <div *ngIf="inputColor.touched">
-      <p class="error" *ngIf="inputColor.errors?.['required']" style="color: red; font-weight: bolder;">
-        Color is required!
-      </p>
-      <p class="error" *ngIf="inputColor.errors?.['minlength']" style="color: red; font-weight: bolder;">
-        Color length must be at least
-        {{inputColor.errors?.['minlength']['requiredLength']}}!
-      </p>
+      <div *ngIf="inputColor.touched">
+        <p
+          class="error"
+          *ngIf="inputColor.errors?.['required']"
+          style="color: red; font-weight: bolder"
+        >
+          Color is required!
+        </p>
+        <p
+          class="error"
+          *ngIf="inputColor.errors?.['minlength']"
+          style="color: red; font-weight: bolder"
+        >
+          Color length must be at least
+          {{inputColor.errors?.['minlength']['requiredLength']}}!
+        </p>
+      </div>
     </div>
-  </div>
 
-  <div class="form-group">
-    <label for="exampleInputYear" style="color: black; font-weight: bolder;">Year</label>
-    <input
-      type="number"
-      class="form-control"
-      id="exampleInputYearHelp"
-      name="year"
-      placeholder="Year"
-      required
-      min="1900"
-      ngModel
-      #inputYear="ngModel"
-    />
+    <div class="form-group">
+      <label for="exampleInputYear" style="color: black; font-weight: bolder"
+        >Year</label
+      >
+      <input
+        type="number"
+        class="form-control"
+        id="exampleInputYearHelp"
+        name="year"
+        placeholder="Year"
+        required
+        min="1900"
+        ngModel
+        #inputYear="ngModel"
+      />
 
-    <div *ngIf="inputYear.touched">
-      <p class="error" *ngIf="inputYear.errors?.['required']" style="color: red; font-weight: bolder;">
-        Year is required!
-      </p>
-      <p class="error" *ngIf="inputYear.errors?.['min']" style="color: red; font-weight: bolder;">
-        Car can't be older than 1900!
-      </p>
+      <div *ngIf="inputYear.touched">
+        <p
+          class="error"
+          *ngIf="inputYear.errors?.['required']"
+          style="color: red; font-weight: bolder"
+        >
+          Year is required!
+        </p>
+        <p
+          class="error"
+          *ngIf="inputYear.errors?.['min']"
+          style="color: red; font-weight: bolder"
+        >
+          Car can't be older than 1900!
+        </p>
+      </div>
     </div>
-  </div>
 
-  <div class="form-group">
-    <label for="exampleInputImageUrl" style="color: black; font-weight: bolder;">Image URL</label>
-    <input
-      type="string"
-      class="form-control"
-      id="exampleInputimageUrlHelp"
-      name="image"
-      placeholder="Image URL"
-      required
-      ngModel
-      #inputimageUrl="ngModel"
-    />
+    <div class="form-group">
+      <label
+        for="exampleInputImageUrl"
+        style="color: black; font-weight: bolder"
+        >Image URL</label
+      >
+      <input
+        type="string"
+        class="form-control"
+        id="exampleInputimageUrlHelp"
+        name="image"
+        placeholder="Image URL"
+        required
+        ngModel
+        #inputimageUrl="ngModel"
+      />
 
-    <div *ngIf="inputimageUrl.touched">
-      <p class="error" *ngIf="inputimageUrl.errors?.['required']" style="color: red; font-weight: bolder;">
-        Image URL is required!
-      </p>
-      <p class="error" *ngIf="!carImageValidator(inputimageUrl.value)" style="color: red; font-weight: bolder;">Image URL must start with http:// or https://!</p>
+      <div *ngIf="inputimageUrl.touched">
+        <p
+          class="error"
+          *ngIf="inputimageUrl.errors?.['required']"
+          style="color: red; font-weight: bolder"
+        >
+          Image URL is required!
+        </p>
+        <p
+          class="error"
+          *ngIf="!carImageValidator(inputimageUrl.value)"
+          style="color: red; font-weight: bolder"
+        >
+          Image URL must start with http:// or https://!
+        </p>
+      </div>
     </div>
-  </div>
 
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
-
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
 </app-hero>
-
