--- a/fancy-cars/src/app/cars/all-cars/all-cars.component.html
+++ b/fancy-cars/src/app/cars/all-cars/all-cars.component.html
@@ -6,7 +6,7 @@
 
     <h1>Full list of all our users awesome cars</h1>
 
-    <div *ngIf="!isLoading" class="row" style="gap: 1rem">
+    <div *ngIf="!isLoading" class="row">
       <app-car-card
         [car]="car"
         *ngFor="let car of allCars"
