--- a/fancy-cars/src/app/cars/details/details.component.css
+++ b/fancy-cars/src/app/cars/details/details.component.css
@@ -1,7 +1,7 @@
-
-  body{
-    background:#f5f5f5;
-    margin-top:20px;}
+body {
+  background: #f5f5f5;
+  margin-top: 20px;
+}
 /*------- portfolio -------*/
 .project {
   margin: 15px 0;
@@ -58,17 +58,11 @@
   border-bottom: none;
 }
 img {
-    width: 100%;
-    max-width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden;
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
 }
 .rounded {
-    border-radius: 5px !important;
+  border-radius: 5px !important;
 }
-
-
-
-
-
-
