--- a/fancy-cars/src/app/core/footer/footer.component.html
+++ b/fancy-cars/src/app/core/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div >
+<div>
   <section class="">
     <footer class="text-center text-white" style="background-color: #0a4275">
       <div class="container p-4 pb-0">
@@ -8,7 +8,7 @@
             <button
               type="button"
               class="btn btn-outline-light btn-rounded"
-              (click)="(registerRedirect())"
+              (click)="registerRedirect()"
             >
               Sign up!
             </button>
