--- a/fancy-cars/src/app/core/header/header.component.css
+++ b/fancy-cars/src/app/core/header/header.component.css
@@ -1,12 +1,14 @@
-.customLogo{
-    height: 50px;
-    width: 50px;
-    cursor: pointer;
+.customLogo {
+  height: 50px;
+  width: 50px;
+  cursor: pointer;
 }
-.collapse{justify-content: center;}
-.navbar-nav{
-    width: 100%;
+.collapse {
+  justify-content: center;
+}
+.navbar-nav {
+  width: 100%;
   /* align-content: center;
   align-items: center; */
-  justify-content:space-around;
+  justify-content: space-around;
 }
