--- a/fancy-cars/src/app/home/home.component.html
+++ b/fancy-cars/src/app/home/home.component.html
@@ -1,4 +1,7 @@
 <app-hero>
-     <h1>Welcome to Fancy Cars!</h1>
-     <h2>A place for car lovers to share their pride and joy and check out other people's vehicles too.</h2>
+  <h1>Welcome to Fancy Cars!</h1>
+  <h2>
+    A place for car lovers to share their pride and joy and check out other
+    people's vehicles too.
+  </h2>
 </app-hero>
