--- a/fancy-cars/src/styles.css
+++ b/fancy-cars/src/styles.css
@@ -42,7 +42,7 @@
   text-shadow: -1px 0 2px #2f4d5a;
 }
 .row {
-  gap: 1rem;
+  /* gap: 1rem; */
   display: flex;
   justify-content: center;
   padding: 1rem;
@@ -57,6 +57,10 @@
   border-radius: 2%;
   padding: 0.5rem;
   gap: 0.5rem;
+  margin: 0.5rem;
+}
+.btn{
+  margin: 0.5rem;
 }
 
 @media (min-width: 1024px) {
